[package]
name = "corn_stats"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "simple tools for status bar for linux"
repository = "https://github.com/hermandev/corn-stats"

[dependencies]
# GTK3 stack (konsisten)
appindicator3 = "0.3.0"

# System metrics
sysinfo = "0.38.1"
procfs = "0.18"
gtk = "0.18.2"
glib = "0.21.5"
clap = { version = "4.5.58", features = ["derive"] }


[[bin]]
name = "corn_stats"
path = "src/main.rs"
