[package]
name = "corn_stats"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "simple tools for status bar for linux"
repository = "https://github.com/hermandev/corn-stats"

[dependencies]
# GTK3 stack (konsisten)
appindicator3 = "0.3.0"

# System metrics
sysinfo = "0.38.1"
procfs = "0.18"
gtk = "0.18.2"
glib = "0.21.5"
clap = { version = "4.5.58", features = ["derive"] }
nix = { version = "0.31.1", features = ["user"] }


[[bin]]
name = "corn_stats"
path = "src/main.rs"
